# mock-jwks

./: Makefile  README.md  manifest.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/scripts/: sbom_json_to_csv.py
.github/workflows/: continuous-integration.yml  sbom.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
proxies/live/apiproxy/: mock-jwks.xml  proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.DecodePublicKeyPathSuffix.xml  AssignMessage.KeycloakClientCredentials.xml  AssignMessage.Ping.xml  AssignMessage.Status.xml  AssignMessage.StatusAPIKey.xml  KeyValueMapOperations.GetMockCIS2ClientCredentials.xml  KeyValueMapOperations.GetMockNhsLoginClientCredentials.xml  RaiseFault.401Unauthorized.xml  ServiceCallout.CallHealthcheckEndpoint.xml  VerifyAPIKey.xml  VerifyAccessToken.AppLevel3.xml  VerifyAccessToken.CIS2aal1.xml  VerifyAccessToken.CIS2aal2.xml  VerifyAccessToken.CIS2aal3.xml  VerifyAccessToken.NHSLoginP0.xml  VerifyAccessToken.NHSLoginP5.xml  VerifyAccessToken.NHSLoginP9.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: mock-jwks.yaml
tests/: test_endpoints.py
