[project]
python = "^3.9"

[tool.poetry]
name = "mock-jwks"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/mock-jwks"
homepage = "https://github.com/NHSDigital/mock-jwks"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^24.3.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"
coverage = "^5.5"
aiohttp = "^3.9.4"

[tool.poetry.scripts]
